--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fzd-sims"
+name = "fuzzy-sims"
 version = "0.1.0"
 authors = ["Hugh Lang <hughlang@gmail.com>"]
 edition = "2018"
@@ -13,6 +13,7 @@ default = ["console_error_panic_hook"]
 [dependencies]
 cfg-if = "0.1.2"
 wasm-bindgen = "0.2"
+# rand = "0.7"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
@@ -26,6 +27,12 @@ console_error_panic_hook = { version = "0.1.1", optional = true }
 #
 # Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
 wee_alloc = { version = "0.4.2", optional = true }
+
+[dependencies.rand]
+default-features = false
+version = "0.7"
+features = ["getrandom", "small_rng"]
+
 
 [dev-dependencies]
 wasm-bindgen-test = "0.2"
