--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ default = ["console_error_panic_hook"]
 [dependencies]
 cfg-if = "0.1.2"
 wasm-bindgen = "0.2"
+itertools = "0.8"
+js-sys = "0.3"
 # rand = "0.7"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
