--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ cfg-if = "0.1.2"
 wasm-bindgen = "0.2"
 itertools = "0.8"
 js-sys = "0.3"
-# rand = "0.7"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
@@ -38,6 +37,7 @@ features = ["getrandom", "small_rng"]
 
 [dev-dependencies]
 wasm-bindgen-test = "0.2"
+color-backtrace = { version = "0.1" }
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
